MxDecimal.java